Fix overflow in the Home page

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -105,6 +105,7 @@ main {
     margin: auto;
     padding: 30px;
     max-height: 720px;
+    overflow: auto;
 
     a {
         color: $accent-color;
